# FastAPI-Practice

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: segmentation_module.py  server.py
frontend/: ui.py
models/: resnet-fpn.pt  swin-fpn.pt
