[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["jemin7709 <jemin7709@naver.com>"]
readme = "README.md"
packages = [{include = "fastapi_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
requests-toolbelt = "^1.0.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
albumentations = "^1.3.1"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
